@@ -343,9 +343,9 @@ def group(stmt):
         group_period,
         group_arrays,
         group_identifier,
-        group_operator,
         group_order,
         group_typecasts,
+        group_operator,
         group_as,
         group_aliased,
         group_assignment,
